# sem2_lab1_c-

./: .gitignore  CMakeLists.txt  func.cpp  func.h  main.cpp
.github/workflows/: release.yml
